# economy-mas

./: .coverage  .gitignore  .python-version  .rsyncignore  WINDOWS_README.md  __init__.py  aktuelles_arbeitspaket_prompt.md  config.py  config.yaml  config_cache.py  legacy_agents_README.md  logger.py  main.py  metrics.py  neues_arbeitspaket_prompt.md  new_prompt_template.md  noxfile.py  package-lock.json  package.json  performance_refactoring_prompt.md  plan-warengeldYamlKonfig.prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt  sim_clock.py  test_coverage_analysis.md  warengeld_accounting.py
agents/: __init__.py  bank.py  base_agent.py  clearing_agent.py  company_agent.py  config_cache.py  economic_agent.py  environmental_agency.py  financial_manager.py  financial_market.py  household_agent.py  labor_market.py  lineage_mixin.py  logging_utils.py  protocols.py  retailer_agent.py  savings_bank_agent.py  state_agent.py
agents/household/: __init__.py  consumption.py  demography.py  savings.py
configs/: debug_5k_random.yaml  run_100yr_random.yaml  run_100yr_random_small.yaml  run_34yr_random.yaml  small_performance_test.yaml  stagnation_test.yaml  stagnation_test_events.yaml
doc/: Manifest fur das 22. Jahrhundert - Samirah Kenawi.txt  Vorschlag fur eine Geldreform - Samirah Kenawi.txt  golden_run.md  golden_test_suite.md  issues.md  notes.md  profile_household_m2.txt  refactoring_plan.md  specs.md  vergleich_dienstleistugssektor.md  windows_setup.md
doc/refactoring_prompts/: 01_golden_test_fix.md  02_golden_test_suite.md  03_plot_metrics_tests.md  04_extract_simulation_engine.md  05_refactor_metrics.md  06_extract_household_components.md  07_increase_test_coverage.md  08_performance_optimization.md  09_documentation_types.md  10_comprehensive_regression.md
doc/refactoring_reports/: 01_golden_test_fix_20260205_200441_diff_before.patch  01_golden_test_fix_20260205_200441_status.txt  01_golden_test_fix_20260205_200508_iter1_review_prompt.md  01_golden_test_fix_20260205_200558_diff_before.patch  01_golden_test_fix_20260205_200626_diff_before.patch  01_golden_test_fix_20260205_200801_diff_before.patch  01_golden_test_fix_20260205_200801_iter1_review_prompt.md  01_golden_test_fix_20260205_200801_status.txt  01_golden_test_fix_20260205_201455_diff_before.patch  01_golden_test_fix_20260205_201455_status.txt  01_golden_test_fix_20260205_223236_diff_before.patch  01_golden_test_fix_20260205_223236_status.txt  01_golden_test_fix_20260205_225213_status.txt  01_golden_test_fix_20260205_231000_iter1_impl_prompt.md  01_golden_test_fix_20260205_231000_status.txt  01_golden_test_fix_20260205_231223_diff_before.patch  01_golden_test_fix_20260205_231223_status.txt  01_golden_test_fix_20260205_232157_iter1_review_prompt.md  (+1 more)
metrics/: __init__.py  analyzer.py  base.py  calculator.py  collector.py  exporter.py
scripts/: __init__.py  analyze_global_metrics_csv.py  analyze_verhakung.py  compare_posthoc.py  investigate_issues.py  legacy_scan.py  plot_metrics.py  profile_household_m2.py  trace_bootstrap.py  validate_golden_run.py  validate_metrics_export.py
simulation/: engine.py
tests/: conftest.py  debug_detailed.py  debug_golden_run.py  test_balance_sheet_naming.py  test_bank_config.py  test_bank_inventory_backing.py  test_bank_processes.py  test_cc_limit_policy.py  test_clearing_agent.py  test_clearing_audit_and_reserves.py  test_clearing_value_correction.py  test_clearing_value_correction_additional.py  test_company_adjust_employees.py  test_company_basic.py  test_company_cleanup_on_exit.py  test_company_split_bankruptcy.py  test_company_step_regression.py  test_config_consistency_deprecation.py  test_config_models.py  test_dienstleistungs_sektor_transparenz.py  test_environmental_agency.py  test_financial_market_disabled.py  test_global_money_metrics.py  test_golden_run_comprehensive.py  test_household_demography_and_hiring.py  test_household_growth_and_split.py  test_household_performance_milestone2.py  test_household_refactor_milestone1.py  test_household_savings_bank_flow.py  test_household_step_comprehensive.py  test_hyperinflation_feedback_mechanisms.py  test_labor_market_deregister_worker.py  test_labor_turnover_rehiring_flow.py  test_legacy_bank_paths_deprecated.py  test_legacy_scan.py  test_m1_wachstum_sterbe_verhalten.py  test_m2_warenbewertung_abschreibung.py  test_m3_fraud_wertberichtigung.py  test_m4_sparkassen_spargrenzen.py  test_m5_agent_ids_standardisiert.py  (+21 more)
tools/: __init__.py  build_windows.bat  complexity.py  migrate_balance_to_sight_balance.py  parse_ruff_output.sh  run_refactor_batch.py  run_refactor_batch.sh  update_windows.bat
wirtschaftssimulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
