[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wirtschaftssimulation"
version = "0.1.0"
description = "Multiagenten-Simulation des Geldsystems nach Kenawi"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.4",
    "PyYAML>=6.0.2",
    "numpy>=1.24",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "nox>=2025.11",
    "pytest>=9.0",
    "mypy>=1.19",
    "ruff>=0.14",
    "black>=25.11",
    "isort>=7.0",
    "vulture>=2.14",
    "radon>=6.0",
    "lizard>=1.19",
]

[tool.setuptools]
py-modules = ["main", "config", "config_cache", "logger", "metrics", "sim_clock", "warengeld_accounting"]

[tool.setuptools.packages.find]
include = ["agents", "agents.*", "metrics", "simulation", "scripts", "tools"]

# ── Ruff ──────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".venv",
    ".nox",
    "build",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90", "PL", "UP"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-args = 100
max-statements = 1000

[tool.ruff.lint.per-file-ignores]
"agents/company_agent.py" = ["C901", "PLR0912"]
"metrics.py" = ["C901", "PLR0912"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "metrics", "simulation", "scripts"]
combine-as-imports = true

# ── Mypy ──────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["^build/"]

[[tool.mypy.overrides]]
module = "logger"
ignore_errors = true

# ── Pytest ────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
